--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ google-auth==2.25.2
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.62.0
+python-dotenv==1.0.0
 requests==2.25.1
 requests-oauthlib==1.3.1
